[package]
name = "into-one"
version = "0.1.0"
edition = "2021"

[profile.dev]
incremental = true

[profile.release]
incremental = true
opt-level = 3
strip = "symbols"
lto = true
panic = "abort"

[dependencies]
regex = { version = "1.3", default-features = false, features = ["std"] }
chrono = { version = "0.4.19", default-features = false, features = ["std", "clock"]}
